# vulkan-engine

./: .gitignore  .gitmodules  CMakeLists.txt  vulkan-engine.code-workspace
Models/: gold-ring.gltf  linked-rings.gltf  monkey.gltf  smooth-monkey.glb  tile-sphere.gltf  uv-sphere.glb
asset source/: gold-ring.blend  linked-rings.blend  tile-sphere.blend
src/: app.cpp  app.hpp  main.cpp  simple_render_system.cpp  simple_render_system.hpp  ve_buffer.cpp  ve_buffer.hpp  ve_camera.cpp  ve_camera.hpp  ve_descriptor_allocator.cpp  ve_descriptor_allocator.hpp  ve_descriptor_builder.cpp  ve_descriptor_builder.hpp  ve_device.cpp  ve_device.hpp  ve_game_object.cpp  ve_game_object.hpp  ve_gltf_loader.cpp  ve_gltf_loader.hpp  ve_image.cpp  ve_image.hpp  ve_input.cpp  ve_input.hpp  ve_light.cpp  ve_light.hpp  ve_material.cpp  ve_material.hpp  ve_mesh.cpp  ve_mesh.hpp  ve_mesh_loader.cpp  ve_mesh_loader.hpp  ve_model.cpp  ve_model.hpp  ve_model_loader.cpp  ve_model_loader.hpp  ve_pipeline.cpp  ve_pipeline.hpp  ve_pipeline_builder.cpp  ve_pipeline_builder.hpp  ve_renderer.cpp  (+17 more)
src/shaders/: pbr.frag  simple.frag  simple.vert
src/spirv_reflect/: spirv_reflect.h
src/tinygltf/: tiny_gltf.cc  tiny_gltf.h
